@@ -1,3 +1,15 @@
+2009-07-02  Oliver Hunt  <oliver@apple.com>
+
+        Reviewed by Anders Carlsson.
+
+        <rdar://problem/6939593> REGRESSION (r37793): Hitting back button on Google often gives non-interactive Google page (26670)
+        <https://bugs.webkit.org/show_bug.cgi?id=26670>
+
+        Make windows loader client match mac behaviour more closely.
+
+        * WebCoreSupport/WebFrameLoaderClient.cpp:
+        (WebFrameLoaderClient::forceLayout):
+
 2009-06-30  Brent Fulgham  <bfulgham@gmail.com>
 
         Reviewed by Adam Roben.
